--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -582,5 +582,5 @@ overflow:hidden;
   height:80rpx;
   padding:15rpx;
   margin-top: 15rpx;
-  margin-bottom: 100rpx;
+  /* margin-bottom: 100rpx; */
 }
