--- a/pages/live/index/index.wxss
+++ b/pages/live/index/index.wxss
@@ -1,5 +1,7 @@
-
+@import "../../__wuBaseWxss__/1.wxss";
+@import "../../__wuBaseWxss__/2.wxss";
 /* 导航 */
+
 .all {
   width: 100%;
   height: 100%;
@@ -80,3 +82,11 @@
 .size .size_last {
   padding-bottom: 12rpx;
 }
+/* 底部文字对齐 */
+.zbj {
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  
+  }
+  
