--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -1,3 +1,12 @@
+@import "../../__wuBaseWxss__/1.wxss";
+@import "../../__wuBaseWxss__/2.wxss";
+/* 底部导航文字对齐 */
+.zbj {
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  
+  }
 /* pages/storage/view/view.wxss */
 view{overflow: initial !important;}
 page{height: 100%;}
