--- a/storage/pages/zcSettle/zcSettle.wxss
+++ b/storage/pages/zcSettle/zcSettle.wxss
@@ -249,18 +249,18 @@
     display: flex;
     align-items: center;
   }
-  .is_invoice2{
+  /* .is_invoice2{
     display: flex;
     align-items: center;
-    padding: 22rpx;
+    padding: 26rpx;
     border-bottom:solid 1rpx #E4E4E4; 
-  }
+  } */
   .is_invoice{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 26rpx;
-    border-bottom:solid px #E4E4E4; 
+    border-bottom:solid 1px #E4E4E4; 
   }
   .checkbox{
     font-size: 30rpx;
