--- a/pages/live/index/index.wxss
+++ b/pages/live/index/index.wxss
@@ -1,5 +1,5 @@
-@import "../../__wuBaseWxss__/1.wxss";
-@import "../../__wuBaseWxss__/2.wxss";
+@import "../../../__wuBaseWxss__/1.wxss"; 
+@import "../../../__wuBaseWxss__/2.wxss";
 /* 导航 */
 
 .all {
