--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,5 +1,5 @@
-@import "../__wuBaseWxss__/1.wxss";
-@import "../__wuBaseWxss__/2.wxss";
+@import "../../__wuBaseWxss__/1.wxss";
+@import "../../__wuBaseWxss__/2.wxss";
 /* 底部导航文字对齐 */
 .zbj {
   display:flex;
