--- a/pages/forget_password/forget_password.wxml
+++ b/pages/forget_password/forget_password.wxml
@@ -9,21 +9,21 @@
       </view>
       <view class="section">
         <view class="section_title">新的支付密码</view>
-        <input name="harvester_phone_num" placeholder="请输入登录密码" value="" bindblur="bindoldChange" type="number" password />
+        <input name="harvester_password" placeholder="请输入新密码" value="" bindblur="bindoldChange" type="number" password />
       </view>
       <view class="section">
         <view class="section_title">重新输入密码</view>
-        <input name="harvester_phone_num" placeholder="请重新输入登录密码" value="" bindblur="bindoldChange" type="number" password />
+        <input name="harvester_new_password" placeholder="请重新输入新密码" value="" bindblur="bindoldChange1" type="number" password />
       </view>
       <view class="section">
         <view class="section_title">验证码</view>
-        <input name="harvester_phone_num1" placeholder="请输入验证码" value="" class="cold_input" />
+        <input name="harvester_phone_num1" placeholder="请输入验证码" value="" class="cold_input" bindblur="code_num"/>
         <view class="send_cold" bindtap="send_cold">{{btntext}}</view>
       </view>
     </view>
 
     <view class="btn-area">
-      <button form-type="submit" class='button-hovers'>重置密码</button>
+      <button form-type="submit" class='button-hovers' disabled="{{disabled}}">重置密码</button>
     </view>
   </view>
 
