--- a/pages/forget_password/forget_password.wxss
+++ b/pages/forget_password/forget_password.wxss
@@ -42,18 +42,16 @@
     background: #F9F9F9;
   }
   .button-hovers{
-   width:750rpx;
+    width:750rpx;
     height:100rpx;
     line-height: 100rpx;
     color:#fff;
     background:#FF6700;
-    border:0;
+    border-radius:0px;
     position: fixed;
     bottom: 0;
-    border-radius:0; 
     font-size: 36rpx;
 
-  
   }
   .picker{
     padding-left: 20rpx;
