--- a/pages/identity_authentication/identity_authentication.wxss
+++ b/pages/identity_authentication/identity_authentication.wxss
@@ -48,7 +48,7 @@
     font-size: 30rpx;
     color:#fff;
     background:#FF6700;
-    border:0;
+    border-radius:0px;
     position: fixed;
     bottom: 0;
   
