--- a/pages/withdrawal/withdrawal.wxss
+++ b/pages/withdrawal/withdrawal.wxss
@@ -72,7 +72,7 @@
 }
 .form_list_input{
   border:solid  1px #E4E4E4;
-  font-size: 29rpx;
+  font-size: 38rpx;
   width: 100%;
   box-shadow: 1rpx 1rpx 1rpx 1rpx white ;
   margin: 0 18px;
@@ -105,6 +105,7 @@
   bottom: 0;
   width: 750rpx;
   margin-left: -20rpx;
+  border-radius: 0px;
 }
 .form_list_select{
   margin-left: 21px;
